Fix vercel.json: Remove empty functions object causing validation error

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,5 @@
   "buildCommand": "npx vite build",
   "outputDirectory": "dist",
   "framework": "vite",
-  "installCommand": "npm install",
-  "functions": {}
+  "installCommand": "npm install"
 }
