--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
 {
-  "framework": "vite",
-  "outputDirectory": "dist"
+  "version": 2,
+  "framework": null,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
+  "devCommand": "npm run dev",
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
